Add contact button linking to email

--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@ margin-top:20px;
 
 <p>Anonym AI Automation System</p>
 
-<button>Access System</button>
+<a href="mailto:hassen@gmail.com">
+<button>Contact AI Service</button>
+</a>
 
 </body>
 </html>
