Change contact button to link to Payhip

--- a/index.html
+++ b/index.html
@@ -35,9 +35,7 @@ margin-top:20px;
 
 <p>Anonym AI Automation System</p>
 
-<a href="mailto:hassen@gmail.com">
-<button>Contact AI Service</button>
-</a>
+<a href="https://payhip.com/b/dQp41">
 
 </body>
 </html>
