--- a/index.html
+++ b/index.html
@@ -36,6 +36,5 @@ margin-top:20px;
 <p>Anonym AI Automation System</p>
 
 <a href="https://payhip.com/b/dQp41">
-
-</body>
-</html>
+<button>Access System</button>
+</a>
